--- a/_posts/blog/2015-04-04-zotero.md
+++ b/_posts/blog/2015-04-04-zotero.md
@@ -7,18 +7,15 @@ category: blog
 
 ## Zotero简介
 Zotero在其[主页][zotero_home]上是这样介绍自己的：“Zotero是一个免费且易用的工具，可以帮助你收集、整理、引用和分享你的研究资讯。”
-![zotero description](/images/zotero/zotero_descrip.png)
+![zotero description](/images/zotero/zotero_descip.png)
+Zotero起初只是一个Firefox浏览器的插件，它突破了传统文献管理的思路：参考文献应该直接从浏览器获取，而不是间接地通过人工下载并添加进管理软件中，参考文献中的各项信息应该通过软件自动识别生成，而不是由人通过复制粘贴提取出来。经过近十年的发展，Zotero依托活跃的开源社区，已经推出了standalone版本，支持Windows、Mac和Linux系统，功能完整，且已有支持chrome和safari浏览器的插件。
 
-Zotero起初只是一个Firefox浏览器的插件，它突破了传统文献管理的思路：参考文献应该直接从浏览器获取，而不是间接地通过人工下载并添加进管理软件中，参考文献中的各项信息应该通过软件自动识别生成，而不是由人通过复制粘贴提取到软件中。经过近十年的发展，Zotero依托活跃的开源社区，已经推出了standalone版本，支持Windows、Mac和Linux系统，功能完整，且已有支持chrome和safari浏览器的插件。
-
-依靠Zotero，你可以：
+通过Zotero，你可以：
 
 *   收集信息
-
-    使用Firefox、chrome、safari插件，随手收藏喜欢的网页，需要的参考文献（及其pdf文档），同时也会对网页信息生成快照留存。
+    使用Firefox、Chrome、Safari插件，随手收藏喜欢的网页和参考文献（及其pdf文档），同时也会对网页信息生成快照留存。
 
     ![zotero save](/images/zotero/auto_save.png)
-
     上面是Zotero主页上的一个例子，当你在浏览器上打开一个页面后，在地址栏末尾会看到一个小图标（可能是文章或者书本，取决于打开的页面的内容，软件可以自动识别），点击这个图标，关于文献的相关信息就会自动添加到Zotero的数据库中，如果可以获得pdf文件，也会将其一起下载并作为附件保存下来。
 
 *   组织信息
