--- a/_posts/blog/2012-06-06-road.md
+++ b/_posts/blog/2012-06-06-road.md
@@ -3,7 +3,7 @@ layout: post
 title: 路。
 description: 总有些事让你更加坚定。
 category: blog
-published: false
+published: true
 ---
 
 前几天突然收到我的 bupt.edu.cn 邮箱即将作废的通知，忽然发现自己的大学时光恍惚间已即将进入第七个年头，说长不长，但相对自己的年龄，却也占了不小的比例。
